# GridMaster

./: .gitignore  README.md  ROADMAP.md  main.py  pyproject.toml
.claude/: settings.local.json
.kiro/steering/: product.md  structure.md  tech.md
backend/: go.mod  go.sum  hub.go  main.go  simulation.go
docs/superpowers/plans/: 2026-03-25-websocket-realtime-push.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: index.css
frontend/src/components/: CyberDatePicker.jsx  DailyKChart.jsx  Dashboard.jsx  GridDensityChart.jsx  ParameterSweepChart.jsx  SimulationPanel.jsx  TradeChart.jsx  VolatilityChart.jsx
frontend/src/lib/: ThemeContext.jsx  api.js  useMarketSocket.js
scripts/: aa.py  deploy.sh  fetch_binance.py  fetch_data.py  fetch_data_mootdx.py  fetch_gold_sina.py  fetch_hk_data.py  get_min_data.py  get_stock_name.py  nginx_wangge.conf  test_akshare.py  test_binance_demo.py  test_em_limit.py  test_mootdx_limit.py  test_mootdx_network.py  wangge.service
